# pymepix

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  LICENSE.md  README.devel.md  README.md  conversionClient.py  conversionServer.py  mainwindow.ui  pyproject.toml  rawConverter-rawAndCentr.py  rawConverter-rawOnly.py  requirements.txt  setup.py
.github/workflows/: python-package.yml
doc/: Makefile  api.rst  conf.py  developer-guide.rst  doc.rst  index.rst  installation.rst  make.bat  modules.rst  overview.rst  references.rst  requirements.txt  todolist.rst  user-guide.rst
doc/api/: overview.rst  pymepix.SPIDR.rst  pymepix.SPIDR.spidrcmds.rst  pymepix.SPIDR.spidrcontroller.rst  pymepix.config.rst  pymepix.config.sophyconfig.rst  pymepix.processing.logic.rst  pymepix.processing.rst  pymepix.util.rst
doc/source/: index.rst  modules.rst  pymepix.config.timepixconfig.rst  pymepix.core.rst  pymepix.processing.acquisition.rst  pymepix.processing.packetprocessor.rst  pymepix.processing.rst  pymepix.rst  pymepix.timepix.rst  pymepix.timepix.timepix.rst  pymepix.timepixdevice.rst
doc/users/: acquisition.rst  connectconfigure.rst  dataformats.rst  doc.rst  (+6 more)
pymepix/: LICENSE  LICENSE.md  README.md  __init__.py  main.py  post_processing.py  pymepix.py  pymepix_connection.py  setup.cfg  setup.py  timepix4device.py  timepixdef.py  timepixdevice.py
pymepix_old/: filestorage.py  timepixacq.py  timepixdef.py  udplistener.py
pymepixviewer/: LICENSE  README.md  setup.py
tests/: test_centroid_calculator.py  test_centroiding-pipeline_pytest.py  test_defaultconfig_pytest.py  test_packetprocessor_pytest.py  test_post_processing.py  test_sophyconfig_pytest.py  test_tcpsampler_pytest.py  test_triggers_num_postproc.py  test_udpsampler_pytest.py
tools/: timepixconfig.py  timepixdaq.py
uiFiles/: tempDaq.py  tempDaqView.ui
(+233 files in other folders)
